[gd_scene load_steps=13 format=2]

[ext_resource path="res://Effects/Flames.tscn" type="PackedScene" id=1]
[ext_resource path="res://CollisionBoxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Ship.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Effects/BlinkAnimator.tscn" type="PackedScene" id=5]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=4]
height = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "Bash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Roll"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shield"
length = 0.5
loop = true

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -7, -7, 4, -4, 7, 4, 7, 7, 4 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 8
damage = 2

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 4

[node name="Collider" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Flames" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 10 )

[node name="BlinkAnimator" parent="." instance=ExtResource( 5 )]

[node name="ActionAnimator" type="AnimationPlayer" parent="."]
anims/Bash = SubResource( 3 )
anims/RESET = SubResource( 5 )
anims/Roll = SubResource( 6 )
anims/Shield = SubResource( 7 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="ExistenceTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="UpDownTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_Hitbox_area_entered"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="timeout" from="ExistenceTimer" to="." method="_on_ExistenceTimer_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="UpDownTimer" to="." method="_on_UpDownTimer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
